# pmdsky-debug-py

./: .gitignore  .gitmodules  README.rst
.github/: dependabot.yml
.github/workflows/: build-test-publish.yml  generate.yml
generator/: pyproject.toml  setup.cfg
generator/pmdsky_debug_py_generator/: generator.py  loader.py  main.py
generator/pmdsky_debug_py_generator/templates/: protocol.py.jinja2  region.py.jinja2
src/: pyproject.toml  setup.cfg
src/pmdsky_debug_py/: _release.py  eu.py  eu_itcm.py  jp.py  jp_itcm.py  na.py  na_itcm.py  protocol.py
